src/styles/hero.module.css
.bgContainer {
  width: 100%;
  height: 100%;
  animation: bounce 4s ease-in-out infinite;
  animation-fill-mode: both;
  animation-delay: -2s;
  position: relative;
}
@keyframes bounce {
  0% {transform: translateY(-5px);}
  50% {transform: translateY(0);}
  100% {transform: translateY(-5px);}
}
.heroContent{
  z-index: 5;
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 0 10px;
}
.intro{
  display: flex;
  flex-direction: column;
}
.emoji{
  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
  animation-duration: 2.5s;        /* Change to speed up or slow down */
  animation-iteration-count: infinite;  /* Never stop waving :) */
  transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
  display: inline-block;
}
@keyframes wave-animation {
  0% { transform: rotate( 0.0deg) }
 10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
 20% { transform: rotate(-8.0deg) }
 30% { transform: rotate(14.0deg) }
 40% { transform: rotate(-4.0deg) }
 50% { transform: rotate(10.0deg) }
 60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
100% { transform: rotate( 0.0deg) }
}
.h1{
  white-space: nowrap;
  overflow: hidden;    
  letter-spacing: 3px;
  text-transform: uppercase;
  display: flex;
  margin: 40px 0 30px;
}
.letter{
  font-size: 3.5rem;
  border-right: solid 3px var(--primary-color);
  color: rgb(227, 221, 221);
  opacity: 0;
  animation: animated-text .5s normal forwards, animated-cursor 600ms 1 forwards;
  animation-delay: 1s;
}
.letter:nth-child(1){
  animation-delay: 0.5s;
  color: var(--primary-color);
}
.letter:nth-child(2){
  animation-delay: 1s;
}
.letter:nth-child(3){
  animation-delay: 1.5s;
}
.letter:nth-child(4){
  animation-delay: 2s;
}
@keyframes animated-text{
  from{opacity: 0;}
  to{opacity: 1;}
}
@keyframes animated-cursor{
  from{border-right-color: var(--primary-color); }
  to{border-right-color: transparent;}
}
.p1, .p{
  display: flex;
  animation-delay: 2s;
  font-size: .9rem;
}
.p{
  margin-top:10px;
}
.p1{
  font-weight: 600;
}
.socialsWrapper{
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.contactWrapper{
  background-color: #533F4D;
  border: 1px solid var(--primary-color);
  border-radius: 5px;
  padding: 5px 30px;
  width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.socials{
  width: 180px;
  margin-top: 30px;
}

@media screen and (min-width: 375px) {
  .p{
    max-width: 400px;
  }
  .heroContent{
    padding: 0 20px;
  }
}
@media screen and (min-width: 640px) {
  .heroContent{
    margin-top: 30px;
    padding: 0 30px;
  }
  .intro{
    align-self: flex-start;
    align-items: flex-start;
  }
  .hello{
    align-self: flex-start;
  }
  .h1{
    justify-content: flex-start;
  }
  .letter{
    font-size: 6rem;
  }
  .p, .p1{
    font-size: 1rem;
    align-self: flex-start;
    text-align: left;
    max-width: 550px;
  }
  .p1{
    font-size: 1.1rem;
    max-width: 100%;
  }
  .socialsWrapper{
    align-self: flex-start;
    align-items: flex-start;
  }
}
@media screen and (min-width: 800px) {
  .heroContent{
    transform: scale(1);
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  .socials{
    position: absolute;
    align-self: center;
    right: 30px;
    top: 0;
    bottom: 0;
    margin: auto 0;
    width: 40px;
    height: 180px;
    flex-direction: column;
    }
}
@media screen and (min-width: 900px) {
  .intro{
    padding: 0 50px;
  }
}
@media screen and (min-width: 1024px) {
  .letter{
    font-size: 7rem;
  }
}
@media screen and (min-width: 1450px) {
  .bgContainer {
    right: -100px;
  }
}
@media screen and (min-width: 1510px) {
  .heroContent {
    margin-top: -50px;
  }
}
@media screen and (min-width: 1670px) {
  .bgContainer {
    right: -150px;
    top: 1000px;
   }
   .intro{
    margin-left: 100px;
   }
 }

